@@ -160,7 +160,7 @@ measure.dynamics.idage <- function(graph, start.vertex=0, agebins=300,
 ## TODO: vtime and etime as attributes
 
 measure.dynamics.d.d <- function(graph, vtime, etime,
-                                 iterations=5, sd=TRUE) {
+                                 iterations=5, sd=TRUE, no=FALSE) {
 
   maxdeg <- max(degree(graph, mode="all"))
   events <- max(vtime, etime)+1
@@ -173,18 +173,19 @@ measure.dynamics.d.d <- function(graph, vtime, etime,
     
     # standard deviation only in the last iteration
     sd.real <- sd && i==iterations
+    no.real <- no && i==iterations
     
     mes <- .Call("R_igraph_measure_dynamics_d_d", graph,
                  as.numeric(vtime), as.numeric(etime),
                  as.numeric(events), as.numeric(st),
-                 as.numeric(maxdeg), as.logical(sd.real),
+                 as.numeric(maxdeg), as.logical(sd.real), as.logical(no.real),
                  PACKAGE="igraph")
 
     mes[[1]][!is.finite(mes[[1]])] <- 0 ## Hmmmm
     
-    mes[[1]] <- mes[[1]]/mes[[1]][2]
+    mes[[1]] <- mes[[1]]/mes[[1]][1]
     if (sd.real) {
-      mes[[2]] <- mes[[2]]/mes[[1]][2]
+      mes[[2]] <- mes[[2]]/mes[[1]][1]
     }
 
     st <- .Call("R_igraph_measure_dynamics_d_d_st", graph,
@@ -193,7 +194,7 @@ measure.dynamics.d.d <- function(graph, vtime, etime,
                 PACKAGE="igraph")
   }
 
-  res <- list(akl=mes[[1]], st=st, sd=mes[[2]])
+  res <- list(akl=mes[[1]], st=st, sd=mes[[2]], no=mes[[3]])
 
   res
 }
